sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:9: error: ')' expected but ',' found.
    for (j <- 0, i){
               ^AlgBubbleSort2:15: error: illegal start of simple expression
  }
  ^