sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  
  var i = 0
  var j = 0
  var b = getNombreValeurs()
  
  for (i <- 0 to b-2 by -1) {
    for (j <- 0, i){
      if (plusPetit(j, j+1) == false) {
        echange(j, j+1);
      }
    }
    
  }
  
}